WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
171501
ASSERTION FAILED: m_layoutPhase == InPostLayerPositionsUpdatedAfterLayout || m_layoutPhase == OutsideLayout
https://bugs.webkit.org/show_bug.cgi?id=171501
Summary
ASSERTION FAILED: m_layoutPhase == InPostLayerPositionsUpdatedAfterLayout || ...
Ryan Haddad
Reported
2017-05-01 11:27:34 PDT
Created
attachment 308736
[details]
Crashlog editing/execCommand/show-modal-dialog-during-execCommand.html has been asserting on mac-wk1 debug since it was enabled in
https://trac.webkit.org/changeset/215970/webkit
https://build.webkit.org/results/Apple%20Sierra%20Debug%20WK1%20(Tests)/r216014%20(899)/results.html
ASSERTION FAILED: m_layoutPhase == InPostLayerPositionsUpdatedAfterLayout || m_layoutPhase == OutsideLayout /Volumes/Data/slave/sierra-debug/build/Source/WebCore/page/FrameView.cpp(4476) : virtual void WebCore::FrameView::paintContents(WebCore::GraphicsContext &, const WebCore::IntRect &) 1 0x10271ba0d WTFCrash 2 0x10acc44e6 WebCore::FrameView::paintContents(WebCore::GraphicsContext&, WebCore::IntRect const&) 3 0x11516af36 -[WebFrame(WebInternal) _drawRect:contentsOnly:] 4 0x1151c134b -[WebHTMLView drawSingleRect:] 5 0x1151c1a75 -[WebHTMLView drawRect:] 6 0x7fff8cdc6369 -[NSView _drawRect:clip:] 7 0x7fff8ce162ff -[NSView _recursiveDisplayAllDirtyWithLockFocus:visRect:] 8 0x1151b4baf -[WebHTMLView(WebPrivate) _recursiveDisplayAllDirtyWithLockFocus:visRect:] 9 0x7fff8cfcfc6a -[NSView _recursiveDisplaySelfAndDescendantsInRect:] 10 0x7fff8cfbe392 -[NSView _recursiveDisplayDescendantsInRect:] 11 0x7fff8ce1655b -[NSView _recursiveDisplayAllDirtyWithLockFocus:visRect:] 12 0x7fff8cfcfc6a -[NSView _recursiveDisplaySelfAndDescendantsInRect:] 13 0x7fff8cfbe392 -[NSView _recursiveDisplayDescendantsInRect:] 14 0x7fff8ce1655b -[NSView _recursiveDisplayAllDirtyWithLockFocus:visRect:] 15 0x7fff8cfcfc6a -[NSView _recursiveDisplaySelfAndDescendantsInRect:] 16 0x7fff8cfbe392 -[NSView _recursiveDisplayDescendantsInRect:] 17 0x7fff8ce1655b -[NSView _recursiveDisplayAllDirtyWithLockFocus:visRect:] 18 0x7fff8cdc3ea2 -[NSView _recursiveDisplayRectIfNeededIgnoringOpacity:isVisibleRect:rectIsVisibleRectForView:topView:] 19 0x7fff8cdc1aa8 -[NSView _displayRectIgnoringOpacity:isVisibleRect:rectIsVisibleRectForView:] 20 0x7fff8cf275d5 -[NSView displayIfNeededInRectIgnoringOpacity:] 21 0x7fff8cf27301 -[NSView displayRectIgnoringOpacity:] 22 0x10cf929c2 WebCore::Widget::paint(WebCore::GraphicsContext&, WebCore::IntRect const&) 23 0x10c8571ee WebCore::ScrollView::paint(WebCore::GraphicsContext&, WebCore::IntRect const&) 24 0x10c705b64 WebCore::RenderWidget::paintContents(WebCore::PaintInfo&, WebCore::LayoutPoint const&) 25 0x10c7063d0 WebCore::RenderWidget::paint(WebCore::PaintInfo&, WebCore::LayoutPoint const&) 26 0x10c45faaf WebCore::paintPhase(WebCore::RenderElement&, WebCore::PaintPhase, WebCore::PaintInfo&, WebCore::LayoutPoint const&) 27 0x10c45fa29 WebCore::RenderElement::paintAsInlineBlock(WebCore::PaintInfo&, WebCore::LayoutPoint const&) 28 0x10b146349 WebCore::InlineElementBox::paint(WebCore::PaintInfo&, WebCore::LayoutPoint const&, WebCore::LayoutUnit, WebCore::LayoutUnit) 29 0x10b150571 WebCore::InlineFlowBox::paint(WebCore::PaintInfo&, WebCore::LayoutPoint const&, WebCore::LayoutUnit, WebCore::LayoutUnit) 30 0x10c76db8f WebCore::RootInlineBox::paint(WebCore::PaintInfo&, WebCore::LayoutPoint const&, WebCore::LayoutUnit, WebCore::LayoutUnit) 31 0x10c547f55 WebCore::RenderLineBoxList::paint(WebCore::RenderBoxModelObject*, WebCore::PaintInfo&, WebCore::LayoutPoint const&) const
Attachments
Crashlog
(112.15 KB, text/plain)
2017-05-01 11:27 PDT
,
Ryan Haddad
no flags
Details
Patch
(2.76 KB, patch)
2017-05-30 13:20 PDT
,
alan
no flags
Details
Formatted Diff
Diff
Patch
(1.71 KB, patch)
2017-05-30 18:16 PDT
,
alan
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Ryan Haddad
Comment 1
2017-05-01 11:46:39 PDT
LayoutTest editing/execCommand/strikethrough-uses-strike-tag.html also seems to have started failing on mac-wk1 Release when this test was enabled:
https://build.webkit.org/results/Apple%20El%20Capitan%20Release%20WK1%20(Tests)/r215986%20(1192)/results.html
Ryan Haddad
Comment 2
2017-05-01 11:51:48 PDT
Skipped editing/execCommand/show-modal-dialog-during-execCommand.html on mac-wk1 in
http://trac.webkit.org/projects/webkit/changeset/216022
Radar WebKit Bug Importer
Comment 3
2017-05-03 17:27:20 PDT
<
rdar://problem/31977453
>
alan
Comment 4
2017-05-30 13:20:39 PDT
Created
attachment 311534
[details]
Patch
alan
Comment 5
2017-05-30 18:16:45 PDT
Created
attachment 311563
[details]
Patch
WebKit Commit Bot
Comment 6
2017-05-30 20:02:02 PDT
Comment on
attachment 311563
[details]
Patch Clearing flags on attachment: 311563 Committed
r217588
: <
http://trac.webkit.org/changeset/217588
>
WebKit Commit Bot
Comment 7
2017-05-30 20:02:03 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug