ASSERTION FAILED: m_layoutPhase == InPostLayerPositionsUpdatedAfterLayout || m_layoutPhase == OutsideLayout https://bugs.webkit.org/show_bug.cgi?id=171501 <rdar://problem/31977453>

Reviewed by Simon Fraser.

We should be able to paint as long as the tree is clean and we are in paintable state.

* page/FrameView.cpp:
(WebCore::FrameView::paintContents):


Canonical link: https://commits.webkit.org/189637@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@217588 268f45cc-cd09-0410-ab3c-d52691b4dbfc